# Thesistest

./: .gitignore  README.md  Worklow.md  pyproject.toml  requirements.txt  requirements_extra.txt  requirements_extra_version.txt
dawndynamicadversarialwatermarkingofneuralnetworks/: setup.py
dawndynamicadversarialwatermarkingofneuralnetworks/configurations/: pruning.yaml  watermark_set.yaml
dawndynamicadversarialwatermarkingofneuralnetworks/configurations/mapping/: mapping-mnist-l5.ini
dawndynamicadversarialwatermarkingofneuralnetworks/configurations/perfect/: caltech-to-caltech-ws250-dn121_drp05.ini  cifar-to-cifar-ws250-base_2.ini  cifar-to-cifar-ws250-dn121_drp05.ini  cifar-to-cifar-ws250-rn34_decay.ini  mnist-to-mnist-ws250-l5.ini
dawndynamicadversarialwatermarkingofneuralnetworks/scripts/: app.py  main.py  mapping.py  prune.py  real_model_stealing_averaging.py  real_model_stealing_averaging_improved.py  victim_train_attacker_fullquery_retrain.py  visualization_2.py
dawndynamicadversarialwatermarkingofneuralnetworks/scripts/old/: noisy_verification.py  real_model_stealing.py  real_model_stealing_.py
dawndynamicadversarialwatermarkingofneuralnetworks/scripts/old/logging/: epoch_logs_MNIST.txt  metrics_argmax_knockoffNets_1000.txt  metrics_with_dawn_CIFAR10argmax_knockoffNets_10000.txt  metrics_with_dawn_CIFAR10argmax_knockoffNets_2500.txt  metrics_with_dawn_MNISTargmax_knockoffNets_20000.txt  metrics_with_dawn_MNISTargmax_knockoffNets_2500.txt  metrics_with_dawnargmax_knockoffNets_250.txt
entangled-watermark/Tensorflowv1/: models.py  resnet.py  train.py  train_edited.py  train_repo.py  utils.py
entangled-watermark/Tensorflowv2/: MODEL_SUFFICIENCY.md  models_new.py  train_original.py  trigger_new.py  visualization_2.py  watermark_dataset.py
entangled-watermark/Tensorflowv2/Backup/: models.py  models_training.py  real_model_stealing_old.py  train.py  train_baseline_finetune.py  trigger.py  utils.py
entangled-watermark/Tensorflowv2/configs/: baseline_train.yaml  ewe_train.yaml  ewe_train_retrain.yaml  knockoffattack_finetuned.yaml
entangled-watermark/pytorch_version/: dataset.py  main.py  models_training.py  train.py  trainer.py
extras/: quantitative.py  survey.py
extras/Meetings/02_06_2023/: Monthly_Update_PPT_02_06.pptx
extras/Meetings/17_08_2023/: Montly_Update_PPT_17_08.pptx
extras/Meetings/20_10_2023/: Montly_Update_PPT_20_10.pptx
extras/Meetings/28_07_2023/: Montly_Update_PPT_28_07.pptx
extras/Meetings/30_06_2023/: Monthly_Update_PPT_30_06.pptx
fontier-stitching-and-extended-frontier-stitching/code/: EXPERIMENT_TIMING.md  adversarial_attacks.py  app.py  cli.py  config.py  frontier-stitching.py  generate_watermarks_multi_attack.py  models.py  real_model_stealing_watermark_single.py  run_complete_experiment.py  test_watermark_robustness.py  train_original.py  watermarking_finetuning.py  watermarking_retraining.py
fontier-stitching-and-extended-frontier-stitching/code/configs/: default.yaml  test_1epoch.yaml
fontier-stitching-and-extended-frontier-stitching/code/utils/: data_utils.py  experiment_logger.py  watermark_verifier.py
fontier-stitching-and-extended-frontier-stitching/experiments/20251110_003410/: experiment_config.json
fontier-stitching-and-extended-frontier-stitching/experiments/20251110_110414/: experiment_config.json
fontier-stitching-and-extended-frontier-stitching/experiments/20251110_114750/: experiment_config.json
fontier-stitching-and-extended-frontier-stitching/experiments/20251110_121733/: experiment_config.json
fontier-stitching-and-extended-frontier-stitching/experiments/20251110_122046/: experiment_config.json
model-extraction-defense/modeldefense/dawndynamicadversarialwatermarkingofneuralnetworks/: README.md  app.py
model-extraction-defense/modeldefense/dawndynamicadversarialwatermarkingofneuralnetworks/dawndynamicadversarialwatermarkingofneuralnetworks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
model-extraction-defense/modeldefense/dawndynamicadversarialwatermarkingofneuralnetworks/scripts/: CODE_REVIEW.md  environment.py  experiment.py  filter.py  fineprune.py  models.py  test_set .py  visualization.py  watermark_set.py
model-extraction-defense/modeldefense/dawndynamicadversarialwatermarkingofneuralnetworks/utils/: config_helper.py  file_helper.py
model-extraction-defense/modeldefense/entangled-watermark/: README.md
model-extraction-defense/modeldefense/entangled-watermark/Tensorflowv1/: models_repo.py  models_training.py  trigger.py  watermark_dataset.py
model-extraction-defense/modeldefense/entangled-watermark/Tensorflowv2/: ewe_extraction.py  ewe_train_finetuning.py  ewe_train_retraining.py  models_new.py  models_training_new.py  real_model_stealing.py  setup.py  train_original.py  trigger_new.py  utils_new.py  visualization.py  watermark_generate.py  watermark_generate_multiple.py
model-extraction-defense/modeldefense/entangled-watermark/old/: mlflow.db  report.txt
model-extraction-defense/modeldefense/entangled-watermark/pytorch_version/: models.py  train_old_before_refactor.py  trainer_old_before_refactor.py  trigger.py  utils.py  watermark_dataset.py
model-extraction-defense/modeldefense/fontier-stitching-and-extended-frontier-stitching/: README.md
model-extraction-defense/modeldefense/fontier-stitching-and-extended-frontier-stitching/code/: cli.py  example_experiment_logging.py  example_watermark_evaluation.py  fgsm_attack.py  frontier-stitching.py  model_finepruning.py  model_pruning.py  models.py  real_model_stealing.py  real_model_stealing_watermark_averaging.py  real_model_stealing_watermark_single.py  run_complete_experiment.py  train_original.py  visualization.py  visualization_acc.py  visualization_lr.py  visualization_unified.py  watermarking_finetuning.py  watermarking_retraining.py
model-extraction-defense/modeldefense/fontier-stitching-and-extended-frontier-stitching/results_backup/: loss_logsmnist_cnn_fine_tunedfgsm_0.1_1000_original_cnn_25.txt  loss_logsmnist_cnn_fine_tunedfgsm_0.1_2500_original_cnn_25.txt  (+9 more)
(+903 files in other folders)
